# pydbope

./: .pylintrc  MANIFEST.in  README.md  requirements.txt  setup.cfg
dboperation/: .db.ini.tmp  DBConfigClass.py  DBControlClass.py  DBQueryClass.py  __dboperation_helper.py  __init__.py  configure.py  sample_query.sql
dboperation/class/: DBConfigClass.py  DBQueryClass.py
