[metadata]
name = dboperation
version = attr:dboperation.__version__.__version__
author = miyazaki aoi
author_email = miyazakia@g-hopper.ne.jp
description = db operation help package for python 
long_description = file:README.md
url = https://github.com/cheshirewara/dboperation-package
license = MIT License

[options]
zip_safe = False
