[metadata]
name = dboperation
version = attr:dboperation.__version__.__version__
author = miyazaki aoi
author_email = miyazakia@g-hopper.ne.jp
description = db operation help package for python 
long_description = file:README.md
url = https://github.com/cheshirewara/dboperation-package
license_file = LICENSE

[options]
zip_safe = False
packages = find:
install_requires =
  psycopg2
  pandas
entry_points = file: entry_points.cfg
